second proposal commit

--- a/Proposal.html
+++ b/Proposal.html
@@ -129,7 +129,8 @@ $(document).ready(function () {
 </div>
 
 
-<p>For my final project I am going to use the PGA tour data along with Peter George and Grant Fairbairn.</p>
+<p>For my final project I am going to use the PGA tour data along with Peter George and Grant Fairbairn. The data goes back to 1983 so I intend to look at trends over the past 35 years and maybe try to see what variables correlate with winning tournaments.</p>
+<pre class="r"><code>#hole2018 &lt;- read_excel(&quot;hole2018.xlsx&quot;)</code></pre>
 
 
 
